# event-ledger-service

./: .gitignore  Dockerfile  README.md  alembic.ini  ecosystem.config.js  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: events.py  health.py  reconciliation.py  router.py  transactions.py
app/core/: config.py  exceptions.py  limiter.py  logging.py
app/db/: base.py  session.py
app/middleware/: exception_handlers.py
app/models/: event.py  merchant.py  transaction.py
app/repositories/: event.py  merchant.py  transaction.py
app/schemas/: common.py  event.py  reconciliation.py  transaction.py
app/services/: event.py  reconciliation.py
app/utils/: messages.py  response_format.py  uuid.py
scripts/: load_events.py
