[tool.poetry]
name = "event-ledger-service"
version = "1.0.0"
description = "Payment lifecycle event ingestion and reconciliation API"
authors = ["Snehal Bagde <snehal.bagde@primathon.in>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "0.136.0"
uvicorn = { version = "0.45.0", extras = ["standard"] }
sqlalchemy = { version = "2.0.49", extras = ["asyncio"] }
greenlet = ">=3.0"
asyncpg = "0.31.0"
alembic = "1.18.4"
pydantic = "2.13.3"
pydantic-settings = "2.14.0"
python-dotenv = "1.0.1"
redis = "7.4.0"
slowapi = "0.1.9"
python-json-logger = "4.1.0"
uuid6 = "^2024.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py314"
